--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- header -->
     <header>
       <nav>
-        <a href="/index.html">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -29,10 +29,7 @@
     <main>
       <!-- main_title -->
       <section>
-        <h1>
-          Effective Solutions<br />
-          for Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- main_our_advantages  -->
@@ -75,9 +72,9 @@
         <ul>
           <li>
             <img
-              src="/images/Product_Designer.jpg"
+              src="./images/Product_Designer.jpg"
               alt="Product Designer"
-              width="260"
+              width="264"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -85,22 +82,22 @@
 
           <li>
             <img
-              src="/images/Frontend_Developer.jpg"
+              src="./images/Frontend_Developer.jpg"
               alt="Frontend Developer"
-              width="260"
+              width="264"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="/images/Marketing.jpg" alt="Marketing" width="260" />
+            <img src="./images/Marketing.jpg" alt="Marketing" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="/images/UI_Designer.jpg" alt="UI Designer" width="260" />
+            <img src="./images/UI_Designer.jpg" alt="UI Designer" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -109,7 +106,7 @@
     </main>
     <!-- footer -->
     <footer>
-      <a href="/index.html">WEBSTUDIO</a>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
